--- a/style.css
+++ b/style.css
@@ -38,3 +38,22 @@ iframe{
     height: 468px;
     
 }
+section#redes-sociais{
+    text-align: right;
+    
+    
+}
+section#redes-sociais img{
+    width: 50px;
+    margin-top: 10px;
+    margin-right: 20px;
+    border-radius: 50%;
+    background-size: cover;
+    
+}
+section#redes-sociais img:hover{
+    transform: translate( -6px, -3px );
+    box-sizing: border-box;
+    border: 2px solid rgb(255, 255, 255);
+    transition: 1s;
+}
